<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/dark_background"
    android:padding="16dp"
    tools:context=".ConcertModeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_mode"
        android:textSize="24sp"
        android:textColor="@color/primary_color"
        android:layout_marginBottom="48dp"/>

    <Button
        android:id="@+id/btnHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/be_host"
        android:textSize="18sp"
        android:backgroundTint="@color/accent_color"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnClient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_host"
        android:textSize="18sp"
        android:backgroundTint="@color/secondary_color"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textSize="18sp"
        android:backgroundTint="@color/darker_background"
        android:textColor="@color/white"/>
</LinearLayout>