<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/dark_background"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textColor="@color/primary_color"
        android:layout_marginBottom="48dp"/>

    <Button
        android:id="@+id/btnMicrophoneMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/microphone_mode"
        android:textSize="18sp"
        android:backgroundTint="@color/secondary_color"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnConcertMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/concert_mode"
        android:textSize="18sp"
        android:backgroundTint="@color/accent_color"
        android:textColor="@color/white"/>
</LinearLayout>