<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    tools:context=".ClientActivity">

    <com.example.sound_visualizer.ParticleView
        android:id="@+id/particleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/client_controls_layout" />

    <LinearLayout
        android:id="@+id/client_controls_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_host_ip"
            android:textSize="20sp"
            android:textColor="@color/accent_color"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/etIpAddress"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="Ej: 192.168.1.100 o 192.168.1.100:12345"
            android:inputType="textNoSuggestions"  android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/secondary_color"
            android:autofillHints="url" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/secondary_color"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/tvConnectionStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/status_disconnected"/>

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/darker_background"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>